--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+$red: #FF3531;
+$blue: #4F2BE8;
+$yellow: #FFB358;
 $orange: #E67E22;
-$green: #32B796;
+$green: #B9E82B;
 $gray: #000000;
 $light-gray: #F4F4F4;
